# mosquito-sim

./: .gitignore  3DProject.cpp  CMakeLists.txt  CMakePresets.json  MyProject.cpp  Output.txt  config.h  drawing.cpp  drawing.h  main.cpp  mosquito.cpp  mosquito.h  precaution  test.cpp  tree.cpp  tree.h  ui.cpp  ui.h  utils.cpp  utils.h  vcpkg.json
